--- a/SizemoreWillResume20180206.html
+++ b/SizemoreWillResume20180206.html
@@ -4,7 +4,7 @@
 		<title>
 			Will Sizemore Web Resume 20180206
 		</title>
-		<link rel="stylesheet" type="text/css" href="./css/printstyle.css">
+		<link rel="stylesheet" type="text/css" href="https://github.com/wolftronix/CSSPrintResume/blob/master/printstyle.css">
 	</head>
 	<body>
 	<div id="pagemargin">
