--- a/SizemoreWillResume20180206.html
+++ b/SizemoreWillResume20180206.html
@@ -4,7 +4,7 @@
 		<title>
 			Will Sizemore Web Resume 20180206
 		</title>
-		<link rel="stylesheet" type="text/css" href="https://github.com/wolftronix/CSSPrintResume/blob/master/printstyle.css">
+		<link rel="stylesheet" type="text/css" href="./css/printstyle.css">
 	</head>
 	<body>
 	<div id="pagemargin">
@@ -21,7 +21,7 @@
 							https://www.linkedin.com/in/willsizemore/
 						</a>
 					</li>
-					<li class="list">Cellular phone: 520-444-7768</li>
+					<li class="list">Cellular phone: <a href="tel:+1520-444-7768">520-444-7768</li>
 					<li class="list">Email: <a href="mailto://william.sizemore.sr@gmail.com">william.sizemore.sr@gmail.com</a></li>
 				</ul>
 			</div>
@@ -39,28 +39,28 @@
 				Management/Business Analysis
 			</h4>
 				<ul class="skilllist">
-					<li>Project Management</li>
-					<li>Software Quality Assurance</li>
-					<li>Process Auditing/Improvement</li>
-					<li>Requirements Analysis</li>
-					<li>Peer Reviews/Code Reviews</li>
+					<li class="skillitems">Project Management</li>
+					<li class="skillitems">Software Quality Assurance</li>
+					<li class="skillitems">Process Auditing/Improvement</li>
+					<li class="skillitems">Requirements Analysis</li>
+					<li class="skillitems">Peer Reviews/Code Reviews</li>
 				</ul>
 			<h4 class="categoryheader">
 				Virtualization
 			</h4>
 				<ul class="skilllist">
-					<li>VMWare Workstation/ESX/ESXi </li>
-					<li>Microsoft HyperV </li>
-					<li><tab>VirtualBox </li>
+					<li class="skillitems">VMWare Workstation/ESX/ESXi </li>
+					<li class="skillitems">Microsoft HyperV </li>
+					<li class="skillitems">VirtualBox </li>
 				</ul>
 			<h4 class="categoryheader">
 				System Administration
 			</h4>
 			<div class="items">
 				<ul class="skilllist">
-					<li>Microsoft Windows XP to 10, Server 2003, 2008, 2013</li>
-					<li>Linux (Red Hat Enterprise versions 4 through 6, Debian, Ubuntu)</li>
-					<li>Shell/Macro scripting (Windows, Office, and Linux), perl, batch, bash, Visual Basic for Applications (macros)</li>
+					<li class="skillitems">Microsoft Windows XP to 10, Server 2003, 2008, 2013</li>
+					<li class="skillitems">Linux (Red Hat Enterprise versions 4 through 6, Debian, Ubuntu)</li>
+					<li class="skillitems">Shell/Macro scripting (Windows, Office, and Linux)</li>
 				</ul>
 			</div>
 			<h4 class="categoryheader">
@@ -68,9 +68,11 @@
 			</h4>
 			<div class="items">
 				<ul class="skilllist">
-					<li class="list">HTML5/CSS3/Javascript</li>
-					<li class="list">Adobe Photoshop/After Effects,GIMP, Paintshop.net</li>
-					<li class="list">Adobe Flash/ActionScript</li>
+					<li  class="skillitems">HTML5/CSS3/Javascript</li>
+					<li  class="skillitems">Adobe Photoshop/After Effects</li>
+					<li class="skillitems">GIMP</li>
+					<li class="skillitems">Paintshop.net</li>
+					<li class="skillitems">Adobe Flash/ActionScript</li>
 				</ul>
 			</div>
 		</section>
